force-app/main/default/objects/Contact/fields/Birthday_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Birthday_This_Month__c</fullName>
    <formula>IF(MONTH (Birthdate)== MONTH(TODAY()), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthday This Month</label>
    <type>Checkbox</type>
</CustomField>