force-app/main/default/objects/Contact/fields/Blood_Type__c.field-meta.xml
<CustomField>
    <fullName>Blood_Type__c</fullName>
    <description>blood of person</description>
    <inlineHelpText>blood of person</inlineHelpText>
    <label>Blood Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>