force-app/main/default/objects/Contact/fields/EmailTester__c.field-meta.xml
<CustomField>
    <fullName>EmailTester__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EmailTester</label>
    <type>Checkbox</type>
</CustomField>