force-app/main/default/objects/Contact/fields/fav_sports__c.field-meta.xml
<CustomField>
    <fullName>fav_sports__c</fullName>
    <label>fav-sports</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>cricket</fullName>
            </value>
            <value>
                <fullName>football</fullName>
            </value>
            <value>
                <fullName>hokey</fullName>
            </value>
            <value>
                <fullName>baseball</fullName>
            </value>
            <value>
                <fullName>badminton</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>