force-app/main/default/objects/Contact/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <description>height of person</description>
    <inlineHelpText>height of person</inlineHelpText>
    <label>Height (feet)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>