force-app/main/default/objects/Contact/fields/Height_inches__c.field-meta.xml
<CustomField>
    <fullName>Height_inches__c</fullName>
    <label>Height (inches)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>