force-app/main/default/objects/Contact/fields/Hobeys__c.field-meta.xml
<CustomField>
    <fullName>Hobeys__c</fullName>
    <description>what is your hobey</description>
    <label>Hobey</label>
    <type>TextArea</type>
</CustomField>