force-app/main/default/objects/Contact/fields/mycontact__c.field-meta.xml
<CustomField>
    <fullName>mycontact__c</fullName>
    <label>mycontact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>