force-app/main/default/objects/Contact/fields/Ocupation__c.field-meta.xml
<CustomField>
    <fullName>Ocupation__c</fullName>
    <description>what do you do</description>
    <inlineHelpText>what do you do</inlineHelpText>
    <label>Ocupation</label>
    <length>128</length>
    <type>Text</type>
</CustomField>