force-app/main/default/objects/Contact/fields/Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_ID__c</fullName>
    <label>Order ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>