force-app/main/default/objects/Contact/recordTypes/swimming_Instructor.recordType-meta.xml
<RecordType>
    <fullName>swimming_Instructor</fullName>
    <active>true</active>
    <label>swimming Instructor</label>
</RecordType>