force-app/main/default/objects/Contact/recordTypes/Swimming_Pool_Manager.recordType-meta.xml
<RecordType>
    <fullName>Swimming_Pool_Manager</fullName>
    <active>true</active>
    <label>Swimming Pool Manager</label>
</RecordType>