force-app/main/default/objects/Contact/validationRules/ChekingFields.validationRule-meta.xml
<ValidationRule>
    <fullName>ChekingFields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( AccountId )),
TEXT( Reference__c ) &lt;&gt; TEXT( Account.Reference__c )
)</errorConditionFormula>
    <errorMessage>Fields are not same</errorMessage>
</ValidationRule>